Bug 696768 - Abort when framebuffer completeness check fails. r=jrmuizel